fixed nav bar to flex: wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,10 +33,11 @@ body {
 }
 
 nav {
-  /* display: flex;
-  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   padding: 10px;
-  margin: 10px; */
+  margin: 10px;
   background-color: var(--light-grey)
 }
 
@@ -46,6 +47,11 @@ nav div {
   color: var(--dark-blue);
   text-decoration: none;
   transition: background-color .3s, color .3s;
+  margin: 0px 5px;
+}
+
+nav a {
+  text-decoration: none;
 }
 
 nav div:hover {
